src/syntax/latex/snapshots/texlab__syntax__latex__parser__tests__acroynm_reference_simple.snap
---
source: src/syntax/latex/parser.rs
expression: "setup(r#\"\\acrshort{fpsLabel}\"#)"

---
ROOT@0..19
  PREAMBLE@0..19
    ACRONYM_REFERENCE@0..19
      ACRONYM_REFERENCE_NAME@0..9 "\\acrshort"
      CURLY_GROUP_WORD@9..19
        L_CURLY@9..10 "{"
        WORD@10..18 "fpsLabel"
        R_CURLY@18..19 "}"

