src/syntax/latex/snapshots/texlab__syntax__latex__parser__tests__biblatex_include_simple.snap
---
source: src/syntax/latex/parser.rs
expression: "setup(r#\"\\addbibresource{foo/bar.bib}\"#)"

---
ROOT@0..28
  PREAMBLE@0..28
    BIBLATEX_INCLUDE@0..28
      BIBLATEX_INCLUDE_NAME@0..15 "\\addbibresource"
      CURLY_GROUP_WORD_LIST@15..28
        L_CURLY@15..16 "{"
        WORD@16..27 "foo/bar.bib"
        R_CURLY@27..28 "}"

