src/syntax/latex/snapshots/texlab__syntax__latex__parser__tests__bibtex_include_simple.snap
---
source: src/syntax/latex/parser.rs
expression: "setup(r#\"\\bibliography{foo/bar}\"#)"

---
ROOT@0..22
  PREAMBLE@0..22
    BIBTEX_INCLUDE@0..22
      BIBTEX_INCLUDE_NAME@0..13 "\\bibliography"
      CURLY_GROUP_WORD_LIST@13..22
        L_CURLY@13..14 "{"
        WORD@14..21 "foo/bar"
        R_CURLY@21..22 "}"

