src/syntax/latex/snapshots/texlab__syntax__latex__parser__tests__brace_group_missing_end.snap
---
source: src/syntax/latex/parser.rs
expression: "setup(r#\"{hello world\"#)"

---
ROOT@0..12
  PREAMBLE@0..12
    CURLY_GROUP@0..12
      L_CURLY@0..1 "{"
      TEXT@1..12
        WORD@1..6 "hello"
        WHITESPACE@6..7 " "
        WORD@7..12 "world"
      MISSING@12..12 ""

