src/syntax/latex/snapshots/texlab__syntax__latex__parser__tests__citation_empty.snap
---
source: src/syntax/latex/parser.rs
expression: "setup(r#\"\\cite{}\"#)"

---
ROOT@0..7
  PREAMBLE@0..7
    CITATION@0..7
      CITATION_NAME@0..5 "\\cite"
      CURLY_GROUP_WORD_LIST@5..7
        L_CURLY@5..6 "{"
        R_CURLY@6..7 "}"

